// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonRemoveModal Component Credential offer decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            CredentialOffer.DeclineTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            CredentialOffer.DeclineParagraph1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            CredentialOffer.DeclineParagraph2
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Decline"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmDeclineButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelDeclineButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Custom notification decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            style={
              Object {
                "marginBottom": 15,
              }
            }
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            CredentialOffer.CustomOfferTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            CredentialOffer.CustomOfferParagraph1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            CredentialOffer.CustomOfferParagraph2
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Decline"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Proof request decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            ProofRequest.DeclineTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint2
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint3
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Decline"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmDeclineButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Decline
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelDeclineButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Remove contact renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              ContactDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageTop
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint2
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint3
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint4
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageBottom
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="ContactDetails.RemoveContact"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              ContactDetails.RemoveContact
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Remove contact renders correctly 2`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              ContactDetails.UnableToRemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              ContactDetails.UnableToRemoveCaption
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="ContactDetails.GoToCredentials"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/GoToCredentialsButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              ContactDetails.GoToCredentials
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/AbortGoToCredentialsButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Remove credential renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              CredentialDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              CredentialDetails.RemoveCaption
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 25,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 5,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                CredentialDetails.YouWillNotLose
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="auto"
              style={
                Object {
                  "height": 0,
                  "overflow": "hidden",
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                nativeID="animatedComponent"
                onLayout={[Function]}
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderLeftColor": "#313132",
                        "borderLeftWidth": 2,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "flex": 1,
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.YouWillNotLoseListItem1
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "flex": 1,
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.YouWillNotLoseListItem2
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginTop": 25,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 5,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                CredentialDetails.HowToGetThisCredentialBack
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="auto"
              style={
                Object {
                  "height": 0,
                  "overflow": "hidden",
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                nativeID="animatedComponent"
                onLayout={[Function]}
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderLeftColor": "#313132",
                        "borderLeftWidth": 2,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "flex": 1,
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.HowToGetThisCredentialBackListItem1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="CredentialDetails.RemoveCredential"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              CredentialDetails.RemoveFromWallet
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Rerenders correctly when not visible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Global.Close"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="com.ariesbifold:id/Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              ContactDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageTop
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint2
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint3
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint4
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageBottom
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "top": -30,
            "width": "100%",
          }
        }
      >
        <RNSVGSvgView
          bbHeight="30"
          bbWidth="100%"
          focusable={false}
          height="30"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "flex": 0,
                "height": 30,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    0,
                    1,
                    -16777216,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradient"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradient",
                ]
              }
              height="30"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="ContactDetails.RemoveContact"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              ContactDetails.RemoveContact
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
